<resources>
    <string name="app_name">ActivityAndFragment</string>
    <string name="txt_btn_pick_image">Pick Image From Gallery</string>
    <string name="txt_btn_take_image">Take Image</string>
    <string name="txt_show_username">Show Username</string>
    <string name="txt_btn_get_username">Get Username</string>
    <string name="txt_btn_send_username">Send Username</string>
    <string name="txt_et_username">Enter UserName</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_first_fragment">First Fragment</string>
    <string name="txt_second_fragment">Second Fragment</string>
    <string name="txt_enter_data">Enter Data</string>
    <string name="title_broadcast_receiver">BroadCast Receiver</string>
    <string name="title_send_data">Send Data</string>
</resources>