<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launcher.ResultLauncherActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:src="@color/white"
        android:elevation="8dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
       />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_pick_image"
        app:cornerRadius="8dp"
        android:id="@+id/btn_pick_image"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_take_image"
        app:cornerRadius="8dp"
        android:id="@+id/btn_take_image"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_show_username"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:id="@+id/text_username"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_get_username"
        app:cornerRadius="8dp"
        android:id="@+id/btn_get_username"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="8dp"/>

</LinearLayout>